# aws_blog

./: .gitignore  README.md  manage.py  pyproject.toml
blog/: admin.py  models.py  settings.py  tests.py  urls.py  views.py
blog/templates/blog/: base.html  base_full_width.html  footer.html  index.html  navbar.html  post_detail.html  post_form.html  post_list.html  single_post_page.html
frostbyte_blog/: asgi.py  settings.py  urls.py  wsgi.py
single_pages/templates/single_pages/: about_me.html  landing.html
