[tool.poetry]
name = "aws_blog"
version = "0.1.0"
description = "personal blog (knowledgebase)"
authors = ["frostbyte1231 <nailbrainz@gmail.com>"]
license = "MIT(?)"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
python-dotenv = "^0.19.2"
pip = "^22.0.3"
install = "^1.3.5"
Pillow = "^9.0.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
